--- a/install_wkhtmltopdf_0.12.3
+++ b/install_wkhtmltopdf_0.12.3
@@ -14,3 +14,7 @@ sudo cp wkhtmltox/bin/wkhtmltopdf /usr/local/bin/
 rm -rf wkhtmltox
 
 echo -e "Wkhtmltopdf 0.12.3 is installed!"
+
+# possible dependencies on homestead
+# sudo apt-get install libxrender-dev
+# sudo apt-get install libxtst6
